--- a/src/Interfaz/PantallaPrincipal/Css/EstilosPrincipal.css
+++ b/src/Interfaz/PantallaPrincipal/Css/EstilosPrincipal.css
@@ -8,11 +8,24 @@
 .divPrincipalTrabajo{
     height: 100%;
     width: 80%;
-    
+}
+
+.Principal.Sliders{
+    width: 100%;
+    height: 30px;
+    top: 93%;
+    display: flex;
+    align-items: flex-end;
+    left: 0%;
+    position: relative;
+
 }
 .divPrincipalControles{
     width: 20%;
     height: 100%;
     left: 0;
     
+}
+.estiloValue .izquierda{
+    text-align: center;
 }
