--- a/src/Interfaz/CaracteristicasContenedor/Css/EstilosCaracteristicasContenedor.css
+++ b/src/Interfaz/CaracteristicasContenedor/Css/EstilosCaracteristicasContenedor.css
@@ -1,6 +1,6 @@
 .divCaracteristicasContenedor{
-    height: 100px;
-    width: 100%;
+    height: 140px;
+    width: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,7 +11,8 @@
     width: 92%;
     border-radius: 17px;
     background: #328bc3;
-    display: flex;
+    display: inline-flex;
+    overflow: hidden;
 }
 .CaractSeleccionado{
     border: 3px solid #d8b410;
@@ -20,22 +21,6 @@
 .divCaractConteDatos{
     width: 100%;
     height: 100%;
-}
-.divCaracConElimintar{
-    width: 30px;
-    height: 30px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    border-radius: 50%;
-    background: #1e2631;
-}
-.divCaracConElimintarBot{
-    width: 90%;
-    height: 90%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
 }
 .pTexto{
     margin: 0;
@@ -46,4 +31,14 @@
 }
 .divCaractConteDatosPadre{
     display: contents;
+}
+.Caracteristicas.Cambios{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    font-size: 10px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    padding: 0px 4px 0px 4px;
 }
