--- a/src/Interfaz/Controles/ElementosDentro/CarasLista/Css/EstiloCarasLista.css
+++ b/src/Interfaz/Controles/ElementosDentro/CarasLista/Css/EstiloCarasLista.css
@@ -2,6 +2,9 @@
     width: 100%;
     height: 100%;
     overflow-y:auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .divCarasLista::-webkit-scrollbar {
     width: 10px;     /* Tamaño del scroll en vertical */
