--- a/src/Interfaz/PantallaPrincipal/Css/EstilosPrincipal.css
+++ b/src/Interfaz/PantallaPrincipal/Css/EstilosPrincipal.css
@@ -1,15 +1,18 @@
+*{
+    user-select: none;
+}
 .divPrincipal{
     position: absolute;
     width: 100%;
     height: 100%;
     background-color: black;
     display: flex;
+    overflow: hidden;
 }
 .divPrincipalTrabajo{
     height: 100%;
     width: 80%;
 }
-
 .Principal.Sliders{
     width: 100%;
     height: 30px;
@@ -18,13 +21,12 @@
     align-items: flex-end;
     left: 0%;
     position: relative;
-
+    
 }
 .divPrincipalControles{
     width: 20%;
     height: 100%;
     left: 0;
-    
 }
 .estiloValue .izquierda{
     text-align: center;
