--- a/src/Interfaz/SliderControl/Css/EstilosSlider.css
+++ b/src/Interfaz/SliderControl/Css/EstilosSlider.css
@@ -2,20 +2,44 @@
     background-color: red;
     border-radius: 13px;
     background-color: rgb(128, 168, 241);
-    padding-left: 23px;
-    padding-right: 23px;
-    width: 230px;
+    padding-left: 3px;
+    padding-right: 3px;
+    
+    width: 80%;
 }
 .slider.padre{
     width: 100%;
     justify-content: center;
     align-items: center;
     display: flex;
-    height: 30px;
+    justify-content: space-around;
 }
 .divBarra{
-    display: grid;
+    display: flex;
     border-radius: 13px;
     background-color: rgb(128, 168, 241);
-    grid-template-columns: 30px 180px 30px;
+    width: 100%;
+    justify-content: space-around;
+}
+.estiloValue{
+    font-size: 10px;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    user-select: none;
+    justify-content: center;
+    width: 15%;
+}
+.Slider.Controlador{
+    width: 10%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 13px;
+    border: 1px solid black;
+    background-color: #0b3c5d;
+}
+.inpuBarra{
+    width: 80%;
 }
